[package]
name = "x509cert"
version = "0.25.1"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>", "Delta4 <156182500+delta4chat@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.75"
license = "MPL-2.0"
description = "anypki fork of X.509 certificate parser and utility functionality"
keywords = ["x509", "cryptography", "pki"]
repository = "https://github.com/delta4chat/cryptography-rs"
readme = "README.md"

[features]
test = []

[dependencies]
bcder = "0.7.4"
bytes = "1.8.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
der = { version = "0.7.9", features = ["alloc", "zeroize"] }
hex = "0.4.3"
pem = "3.0.4"
ring = "0.17.8"
signature = { version = "2.2.0", features = ["std"] }
spki = { version = "0.7.3", features = ["alloc"] }
thiserror = "1.0.66"
zeroize = { version = "1.8.1", features = ["derive"] }

