[package]
name = "x509cert"
version = "0.25.2"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>", "Delta4 <156182500+delta4chat@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.75"
license = "MPL-2.0"
description = "anypki fork of X.509 certificate parser and utility functionality"
keywords = ["x509", "cryptography", "pki"]
repository = "https://github.com/delta4chat/cryptography-rs"
readme = "README.md"

[features]
ring = [ "dep:ring" ]
rustcrypto = [ "ed25519-dalek", "rand", "dep:pkcs8", "dep:digest", "dep:sha2", "dep:rsa", "dep:p256", "dep:p384", "dep:sha1" ]
test = []
ed25519-dalek = [ "rand", "dep:ed25519-dalek" ]
rand = [ "dep:rand" ]

[dependencies]
bcder = "0.7.4"
bytes = "1.8.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
der = { version = "0.7.9", features = ["alloc", "zeroize"] }
hex = "0.4.3"
pem = "3.0.4"

ring = { version = "0.17.8", optional = true }

digest = { version = "0.10.7", optional = true }
ed25519-dalek = { version = "2.1.1", optional = true, features = ["pkcs8", "rand_core"] }
rsa = { version = "0.9.7", optional = true, features = ["sha2"] }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.8", optional = true }
signature = { version = "2.2.0", features = ["std"] }
spki = { version = "0.7.3", features = ["alloc"] }
thiserror = "1.0.66"
zeroize = { version = "1.8.1", features = ["derive"] }
rand = { version = "0.8.5", optional = true }
pkcs8 = { version = "0.10.2", optional = true }
p256 = { version = "0.13.2", optional = true, features = ["ecdsa-core"] }
p384 = { version = "0.13.1", optional = true, features = ["ecdsa-core"] }

